feat: Implement Partial Password System, including functionality to import passwords from VG.